# template-python-iot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agents/skills/: architecture.md  code-quality.md  security-performance.md  testing.md  version-control.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.weblapp/: template.json
deploy/: myapp.service
deploy/grafana/: dashboard.json
deploy/mosquitto/: mosquitto.conf
deploy/ota/: update.sh
src/myapp/: __init__.py  __main__.py  app.py  config.py
src/myapp/drivers/: __init__.py  base.py  gpio_driver.py  i2c_driver.py  mock_driver.py
src/myapp/i18n/: __init__.py  en.json  tr.json
src/myapp/protocols/: __init__.py  ble_client.py  http_client.py  mqtt_client.py  serial_client.py  ws_client.py
src/myapp/services/: collector.py  watchdog.py
src/myapp/storage/: sqlite.py
src/myapp/utils/: logger.py
tests/: conftest.py  test_collector.py  test_drivers.py  test_storage.py
